  and project files for MSVC++
  * Reload button functional(mentor66)

Fixed Bugs
----------
  * :

Features added
----------
  * 3336699 : Made save files portable between byte orders.
  * 3283536 : Manage separate directory for syndicate and freesynd
  * 3337516 : Standardize text fields in configure and loadsave menus
  * 3202739 : keyboard type management
  * It's now possible to define an acceleration key for a button by
    inserting a '&' caracter before the letter in the button label in the
	language file. Works only for letters.
  * Menus are now created when first accessed not all once.
  * In the Map menu, pressing PageUp or PageDown increases/decreases tax from 10%

Known issues with this release
------------------------------
  * Agent AI is not operational.
  * The minimap is not complete.
  * PathFinding requires improvement
  * Mission debriefing is not operational
  * No animation for windows
  * Map drawing is buggy

History
-------
 v0.5
 ----
  * Correct positioning by Z axis for all objects
  * Bug, too small space allocated for enhance/info cost values, destructor
 for Mission class was not able to deallocate briefing string
  * Vehicles have people set inside
  * Only driver is able to drive vehicle
  * If vehicle is destroyed people leave it
  * People are armed, but enemy agents are not armed correctly
  * In missions, at start, where weapons are on floor, weapons should be
  visible now
  * Small doors will open and close
  * Vehicles will not move if they are destroyed
  * Project is now buld with autoconf/automake
  * Map menu is now completly functional
  * Neon signs are correctly setup on mission load
  * Correct animations for people/vehicles on damage recieved
  * Instant damage, damage types
  * Energy shield will not protect from Hit, Explosion
  * Use of freesynd.ini file to specify application configuration
  * Use of language files
  * Added minimap to briefmenu