@@ -28,7 +28,7 @@
 #include <assert.h>
 #include "app.h"
 #include "utils/file.h"
-#include "mapmenu.h"
+#include "menus/mapmenu.h"
 
 struct pos {
     int x;
@@ -47,56 +47,56 @@ struct BlockDisplay {
     struct pos line_start;
     struct pos line_end;
 } g_BlocksDisplay[50] = {
-    {{46, 18}, {14, 12}, {48, 32}, {76, 36}},
-    {{90, 16}, {14, 12}, {48, 32}, {107, 40}},
-    {{122, 6}, {226, 78}, {226, 78}, {181, 33}},
-    {{218, 16}, {226, 78}, {245, 78}, {250, 40}},
-    {{320, 22}, {289, 24}, {322, 52}, {344, 60}},
-    {{370, 20}, {353, 12}, {387, 45}, {404, 62}},
-    {{434, 10}, {353, 12}, {388, 34}, {458, 48}},
-    {{482, 30}, {585, 69}, {583, 79}, {527, 53}},
-    {{70, 36}, {13, 59}, {49, 73}, {100, 63}},
-    {{290, 70}, {243, 93}, {279, 107}, {316, 97}},
-    {{334, 54}, {289, 22}, {325, 57}, {360, 88}},
-    {{372, 58}, {353, 12}, {381, 47}, {406, 90}},
-    {{436, 74}, {353, 12}, {389, 45}, {452, 102}},
-    {{434, 62}, {585, 69}, {584, 85}, {487, 81}},
-    {{532, 76}, {585, 69}, {584, 89}, {541, 93}},
-    {{160, 52}, {225, 77}, {224, 87}, {177, 69}},
-    {{56, 76}, {13, 59}, {49, 83}, {74, 91}},
-    {{76, 76}, {13, 59}, {49, 83}, {96, 93}},
-    {{110, 76}, {149, 123}, {149, 123}, {117, 91}},
-    {{140, 76}, {149, 123}, {163, 122}, {157, 91}},
-    {{278, 124}, {243, 93}, {279, 123}, {300, 135}},
-    {{288, 124}, {243, 93}, {279, 123}, {326, 153}},
-    {{344, 116}, {421, 185}, {423, 183}, {385, 137}},
-    {{398, 106}, {421, 185}, {435, 184}, {427, 129}},
-    {{474, 98}, {565, 133}, {564, 143}, {511, 119}},
-    {{56, 98}, {13, 127}, {49, 135}, {86, 113}},
-    {{100, 106}, {149, 123}, {148, 133}, {107, 117}},
-    {{198, 130}, {207, 165}, {217, 164}, {207, 137}},
-    {{266, 140}, {207, 165}, {243, 177}, {284, 163}},
-    {{336, 156}, {243, 209}, {279, 215}, {358, 167}},
-    {{378, 146}, {421, 185}, {421, 184}, {401, 159}},
-    {{440, 118}, {421, 185}, {449, 184}, {468, 143}},
-    {{492, 136}, {565, 133}, {564, 149}, {509, 147}},
-    {{66, 122}, {13, 127}, {49, 141}, {80, 135}},
-    {{120, 172}, {61, 179}, {97, 195}, {138, 189}},
-    {{280, 170}, {243, 209}, {279, 211}, {312, 181}},
-    {{326, 166}, {285, 251}, {317, 250}, {352, 205}},
-    {{370, 172}, {421, 185}, {420, 203}, {385, 203}},
-    {{118, 206}, {89, 257}, {115, 256}, {131, 217}},
-    {{142, 184}, {207, 165}, {206, 191}, {159, 211}},
-    {{180, 196}, {243, 209}, {242, 225}, {195, 223}},
-    {{328, 226}, {285, 251}, {321, 259}, {342, 249}},
-    {{354, 212}, {412, 249}, {412, 259}, {363, 243}},
-    {{502, 250}, {459, 253}, {495, 278}, {522, 285}},
-    {{542, 246}, {597, 259}, {596, 275}, {569, 271}},
-    {{542, 282}, {597, 259}, {596, 283}, {567, 293}},
-    {{152, 230}, {215, 265}, {214, 269}, {173, 243}},
-    {{148, 242}, {215, 265}, {214, 283}, {159, 281}},
-    {{170, 252}, {215, 265}, {214, 277}, {179, 269}},
-    {{504, 160}, {471, 197}, {507, 211}, {536, 207}}
+    { {46, 18}, {14, 12}, {48, 32}, {76, 36}},
+    { {90, 16}, {14, 12}, {48, 32}, {107, 40}},
+    { {122, 6}, {226, 78}, {226, 78}, {181, 33}},
+    { {218, 16}, {226, 78}, {245, 78}, {250, 40}},
+    { {320, 22}, {289, 24}, {322, 52}, {344, 60}},
+    { {370, 20}, {353, 12}, {387, 45}, {404, 62}},
+    { {434, 10}, {353, 12}, {388, 34}, {458, 48}},
+    { {482, 30}, {585, 69}, {583, 79}, {527, 53}},
+    { {70, 36}, {13, 59}, {49, 73}, {100, 63}},
+    { {290, 70}, {243, 93}, {279, 107}, {316, 97}},
+    { {334, 54}, {289, 22}, {325, 57}, {360, 88}},
+    { {372, 58}, {353, 12}, {381, 47}, {406, 90}},
+    { {436, 74}, {353, 12}, {389, 45}, {452, 102}},
+    { {434, 62}, {585, 69}, {584, 85}, {487, 81}},
+    { {532, 76}, {585, 69}, {584, 89}, {541, 93}},
+    { {160, 52}, {225, 77}, {224, 87}, {177, 69}},
+    { {56, 76}, {13, 59}, {49, 83}, {74, 91}},
+    { {76, 76}, {13, 59}, {49, 83}, {96, 93}},
+    { {110, 76}, {149, 123}, {149, 123}, {117, 91}},
+    { {140, 76}, {149, 123}, {163, 122}, {157, 91}},
+    { {278, 124}, {243, 93}, {279, 123}, {300, 135}},
+    { {288, 124}, {243, 93}, {279, 123}, {326, 153}},
+    { {344, 116}, {421, 185}, {423, 183}, {385, 137}},
+    { {398, 106}, {421, 185}, {435, 184}, {427, 129}},
+    { {474, 98}, {565, 133}, {564, 143}, {511, 119}},
+    { {56, 98}, {13, 127}, {49, 135}, {86, 113}},
+    { {100, 106}, {149, 123}, {148, 133}, {107, 117}},
+    { {198, 130}, {207, 165}, {217, 164}, {207, 137}},
+    { {266, 140}, {207, 165}, {243, 177}, {284, 163}},
+    { {336, 156}, {243, 209}, {279, 215}, {358, 167}},
+    { {378, 146}, {421, 185}, {421, 184}, {401, 159}},
+    { {440, 118}, {421, 185}, {449, 184}, {468, 143}},
+    { {492, 136}, {565, 133}, {564, 149}, {509, 147}},
+    { {66, 122}, {13, 127}, {49, 141}, {80, 135}},
+    { {120, 172}, {61, 179}, {97, 195}, {138, 189}},
+    { {280, 170}, {243, 209}, {279, 211}, {312, 181}},
+    { {326, 166}, {285, 251}, {317, 250}, {352, 205}},
+    { {370, 172}, {421, 185}, {420, 203}, {385, 203}},
+    { {118, 206}, {89, 257}, {115, 256}, {131, 217}},
+    { {142, 184}, {207, 165}, {206, 191}, {159, 211}},
+    { {180, 196}, {243, 209}, {242, 225}, {195, 223}},
+    { {328, 226}, {285, 251}, {321, 259}, {342, 249}},
+    { {354, 212}, {412, 249}, {412, 259}, {363, 243}},
+    { {502, 250}, {459, 253}, {495, 278}, {522, 285}},
+    { {542, 246}, {597, 259}, {596, 275}, {569, 271}},
+    { {542, 282}, {597, 259}, {596, 283}, {567, 293}},
+    { {152, 230}, {215, 265}, {214, 269}, {173, 243}},
+    { {148, 242}, {215, 265}, {214, 283}, {159, 281}},
+    { {170, 252}, {215, 265}, {214, 277}, {179, 269}},
+    { {504, 160}, {471, 197}, {507, 211}, {536, 207}}
 };
 
 extern int g_Colours[8];
@@ -107,30 +107,40 @@ extern int g_Colours[8];
  * \param m The menu manager.
  */
 MapMenu::MapMenu(MenuManager * m)
-	:  Menu(m, MENU_MAP, MENU_MAIN, "mmap.dat", "mmapout.dat"),
-mapblk_data_(NULL), select_tick_count_(0)
-{
-	// 
-    briefButId_ = addOption(17, 347, 128, 25, "#MAP_BRIEF_BUT", FontManager::SIZE_2, MENU_BRIEF);
-	addOption(500, 347,  128, 25, "#MENU_MAIN_BUT", FontManager::SIZE_2, MENU_MAIN);
+    :  Menu(m, MENU_MAP, MENU_MAIN, "mmap.dat", "mmapout.dat"),
+mapblk_data_(NULL), select_tick_count_(0) {
+    //
+    briefButId_ = addOption(17, 347, 128, 25, "#MAP_BRIEF_BUT",
+        FontManager::SIZE_2, MENU_BRIEF);
+    addOption(500, 347,  128, 25, "#MENU_MAIN_BUT",
+        FontManager::SIZE_2, MENU_MAIN);
 
-    //txtCountryId_ = addStatic(268, 312, "", FontManager::SIZE_1, true);   // Country name
-	txtCountryId_ = addStatic(188, 312, 270, "", FontManager::SIZE_1, true);   // Country name
-    addStatic(194, 332, "#MAP_POP", FontManager::SIZE_2, true);       // Pop label
-    txtPopId_ = addStatic(268, 332, "", FontManager::SIZE_1, true);          // Pop value
-    addStatic(194, 346, "#MAP_TAX", FontManager::SIZE_2, true);       // Tax label
-    txtTaxValueId_ = addStatic(268, 346, "", FontManager::SIZE_1, true);       // Tax value
-    txtOwnLblId_ = addStatic(194, 360, "#MAP_OWN", FontManager::SIZE_2, true);       // Own label
-    txtOwnId_ = addStatic(268, 360, "", FontManager::SIZE_1, true);          // Own status
+    // Country name
+    txtCountryId_ = addStatic(188, 312, 270, "", FontManager::SIZE_1,
+        true);
+    // Pop label
+    addStatic(194, 332, "#MAP_POP", FontManager::SIZE_2, true);
+    // Pop value
+    txtPopId_ = addStatic(268, 332, "", FontManager::SIZE_1, true);
+    // Tax label
+    addStatic(194, 346, "#MAP_TAX", FontManager::SIZE_2, true);
+    // Tax value
+    txtTaxValueId_ = addStatic(268, 346, "", FontManager::SIZE_1, true);
+    // Own label
+    txtOwnLblId_ = addStatic(194, 360, "#MAP_OWN", FontManager::SIZE_2, true);
+    // Own status
+    txtOwnId_ = addStatic(268, 360, "", FontManager::SIZE_1, true);
 
-    txtTimeId_ = addStatic(500, 9, "", FontManager::SIZE_2, true);       // Time
+    txtTimeId_ = addStatic(500, 9, "", FontManager::SIZE_2, true);  // Time
 
     // Tax cursors
     txtTaxPctId_ = addStatic(350, 346, "@   30%", FontManager::SIZE_1, true);
-    decrTaxButId_ = addImageOption(375, 346, Sprite::MSPR_TAX_DECR, Sprite::MSPR_TAX_DECR, false);
-	registerHotKey(K_MINUS, decrTaxButId_);
-    incrTaxButId_ = addImageOption(435, 346, Sprite::MSPR_TAX_INCR, Sprite::MSPR_TAX_INCR, false);
-	registerHotKey(K_PLUS, incrTaxButId_);
+    decrTaxButId_ = addImageOption(375, 346, Sprite::MSPR_TAX_DECR,
+        Sprite::MSPR_TAX_DECR, false);
+    registerHotKey(K_MINUS, decrTaxButId_);
+    incrTaxButId_ = addImageOption(435, 346, Sprite::MSPR_TAX_INCR,
+        Sprite::MSPR_TAX_INCR, false);
+    registerHotKey(K_PLUS, incrTaxButId_);
 
     // 64 x 44 x 50
     // Load map block informations
@@ -140,8 +150,7 @@ mapblk_data_(NULL), select_tick_count_(0)
     blink_status_ = true;
 }
 
-MapMenu::~MapMenu()
-{
+MapMenu::~MapMenu() {
     delete[] mapblk_data_;
 }
 
@@ -152,17 +161,18 @@ MapMenu::~MapMenu()
 void MapMenu::handleBlockSelected() {
     Block blk = g_Session.getBlock(g_Session.getSelectedBlockId());
 
-    if (blk.status == BLK_FINISHED) { // A mission is finished
+    if (blk.status == BLK_FINISHED) {  // A mission is finished
         // Brief is available only if replay mission cheat is set
         if (g_Session.canReplayMission()) {
             getOption(briefButId_)->setVisible(true);
         } else {
             getOption(briefButId_)->setVisible(false);
         }
-    } else if (blk.status == BLK_UNAVAIL) { // A mission is unavailable
+    } else if (blk.status == BLK_UNAVAIL) {  // A mission is unavailable
         getOption(briefButId_)->setVisible(false);
     } else {
-        // Brief is available because mission is either available or on rebellion
+        // Brief is available because mission is either available
+        // or on rebellion
         getOption(briefButId_)->setVisible(true);
     }
 
@@ -181,7 +191,6 @@ void MapMenu::handleBlockSelected() {
 
     // Mission is finished
     if (blk.status == BLK_FINISHED) {
-    
         // Status
         getStatic(txtOwnLblId_)->setText("#MAP_STAT");
         switch (blk.popStatus) {
@@ -214,7 +223,7 @@ void MapMenu::handleBlockSelected() {
 #endif
         getStatic(txtTaxValueId_)->setText(tmp);
 
-		getOption(decrTaxButId_)->setVisible(true);
+        getOption(decrTaxButId_)->setVisible(true);
         getOption(incrTaxButId_)->setVisible(true);
 
 #ifdef WIN_SECURE
@@ -247,11 +256,10 @@ void MapMenu::handleBlockSelected() {
         getOption(incrTaxButId_)->setVisible(false);
     }
 
-    //addDirtyRect(192, 310, 260, 70);
+    /*addDirtyRect(192, 310, 260, 70);*/
 }
 
-void MapMenu::handleTick(int elapsed)
-{
+void MapMenu::handleTick(int elapsed) {
     // This a count to refresh the blinking line of the selector
     select_tick_count_ += elapsed;
     if (select_tick_count_ > 200) {
@@ -288,12 +296,12 @@ void MapMenu::updateClock() {
  * The selector consists of the player logo inside a box and
  * a line that links the logo to the selected region.
  */
-void MapMenu::drawSelector()
-{
-    int logo_x = g_BlocksDisplay[g_Session.getSelectedBlockId()].logo_pos.x;
-    int logo_y = g_BlocksDisplay[g_Session.getSelectedBlockId()].logo_pos.y;
-    g_Screen.drawLogo(logo_x, logo_y, g_Session.getLogo(), g_Session.getLogoColour(),
-                      true);
+void MapMenu::drawSelector() {
+    uint8 selId = g_Session.getSelectedBlockId();
+    int logo_x = g_BlocksDisplay[selId].logo_pos.x;
+    int logo_y = g_BlocksDisplay[selId].logo_pos.y;
+    g_Screen.drawLogo(logo_x, logo_y, g_Session.getLogo(),
+        g_Session.getLogoColour(), true);
 
     // Draw box enclosing logo
     uint8 box[18 * 18];
@@ -309,10 +317,10 @@ void MapMenu::drawSelector()
     g_Screen.scale2x(logo_x - 2, logo_y - 2, 18, 18, box);
 
     // Draw line between country and logobox
-    int blk_line_end_x = g_BlocksDisplay[g_Session.getSelectedBlockId()].line_end.x;
-    int blk_line_end_y = g_BlocksDisplay[g_Session.getSelectedBlockId()].line_end.y;
-    int blk_line_start_x = g_BlocksDisplay[g_Session.getSelectedBlockId()].line_start.x;
-    int blk_line_start_y = g_BlocksDisplay[g_Session.getSelectedBlockId()].line_start.y;
+    int blk_line_end_x = g_BlocksDisplay[selId].line_end.x;
+    int blk_line_end_y = g_BlocksDisplay[selId].line_end.y;
+    int blk_line_start_x = g_BlocksDisplay[selId].line_start.x;
+    int blk_line_start_y = g_BlocksDisplay[selId].line_start.y;
     g_Screen.drawLine(blk_line_start_x, blk_line_start_y, blk_line_end_x,
                       blk_line_end_y, 252, 5, select_tick_count_ % 10);
     g_Screen.drawLine(blk_line_start_x, blk_line_start_y - 1,
@@ -342,13 +350,12 @@ void MapMenu::handleShow() {
     updateClock();
 }
 
-void MapMenu::handleRender(DirtyList &dirtyList)
-{
+void MapMenu::handleRender(DirtyList &dirtyList) {
     // Draws all countries
     for (int i = 0; i < GameSession::NB_MISSION; i++) {
         Block blk = g_Session.getBlock(i);
-        if ((i == g_Session.getSelectedBlockId()) || 
-            (blk.status == BLK_AVAIL && blink_status_) || 
+        if ((i == g_Session.getSelectedBlockId()) ||
+            (blk.status == BLK_AVAIL && blink_status_) ||
             blk.status != BLK_AVAIL) {
             uint8 data[64 * 44];
             memcpy(data, mapblk_data_ + i * 64 * 44, 64 * 44);
@@ -357,22 +364,20 @@ void MapMenu::handleRender(DirtyList &dirtyList)
                     data[j] = 255;
                 else
                     data[j] = blk.colour;
-            g_Screen.scale2x(g_BlocksDisplay[i].pos.x, g_BlocksDisplay[i].pos.y, 64, 44,
-                             data, 64);
+            g_Screen.scale2x(g_BlocksDisplay[i].pos.x,
+                g_BlocksDisplay[i].pos.y, 64, 44, data, 64);
         }
     }
 
     // Draws the selector
     drawSelector();
-
 }
 
 void MapMenu::handleLeave() {
     g_System.hideCursor();
 }
 
-bool MapMenu::handleMouseDown(int x, int y, int button, const int modKeys)
-{
+bool MapMenu::handleMouseDown(int x, int y, int button, const int modKeys) {
     // Checks among the missions which one has been clicked on
     for (int i = 0; i < 50; i++) {
         if (x > g_BlocksDisplay[i].pos.x && x < g_BlocksDisplay[i].pos.x + 64 &&
@@ -380,12 +385,11 @@ bool MapMenu::handleMouseDown(int x, int y, int button, const int modKeys)
             if (mapblk_data_
                 [i * 64 * 44 + (y - g_BlocksDisplay[i].pos.y) / 2 * 64 +
                  (x - g_BlocksDisplay[i].pos.x) / 2] != 0) {
-
                      // Do something only if the selected block is new
                      // ie the user did not click on the same mission
                      if (g_Session.getSelectedBlockId() != i) {
                         g_Session.setSelectedBlockId(i);
-                        
+
                         handleBlockSelected();
                         needRendering();
                      }
@@ -394,18 +398,18 @@ bool MapMenu::handleMouseDown(int x, int y, int button, const int modKeys)
         }
     }
 
-	return false;
+    return false;
 }
 
 void MapMenu::handleAction(const int actionId, void *ctx, const int modKeys) {
     bool refresh = false;
-    if (actionId == incrTaxButId_ ) {
+    if ( actionId == incrTaxButId_ ) {
         if (modKeys & KMD_CTRL) {
             refresh = g_Session.addToTaxRate(10);
         } else {
             refresh = g_Session.addToTaxRate(1);
         }
-    } else if (actionId == decrTaxButId_ ) {
+    } else if ( actionId == decrTaxButId_ ) {
         if (modKeys & KMD_CTRL) {
             refresh = g_Session.addToTaxRate(-10);
         } else {
@@ -419,30 +423,47 @@ void MapMenu::handleAction(const int actionId, void *ctx, const int modKeys) {
     }
 }
 
-bool MapMenu::handleUnknownKey(Key key, const int modKeys)
-{
+bool MapMenu::handleUnknownKey(Key key, const int modKeys) {
     bool consumed = false;
-    if (key.unicode == K_DGT_0) {
-        g_Session.setSelectedBlockId(0);
-        consumed = true;
-	} else if (key.keyFunc == KFC_LEFT && (g_Session.getSelectedBlockId() > 0)) {
-        g_Session.setSelectedBlockId(g_Session.getSelectedBlockId() - 1);
-        consumed = true;
-	} else if (key.keyFunc == KFC_RIGHT && g_Session.getSelectedBlockId() < 49) {
-        g_Session.setSelectedBlockId(g_Session.getSelectedBlockId() + 1);
-        consumed = true;
+    if (key.keyFunc == KFC_LEFT) {
+        // navigate among available missions by decreasing index
+        int start = g_Session.getSelectedBlockId();
+        for (int i = 1; i < GameSession::NB_MISSION; i++) {
+            int index = start - i;
+            if (index < 0) {
+                index = GameSession::NB_MISSION + index;
+            }
+            Block blk = g_Session.getBlock(index);
+            if (blk.status == BLK_AVAIL) {
+                g_Session.setSelectedBlockId(index);
+                consumed = true;
+                break;
+            }
+        }
+    } else if (key.keyFunc == KFC_RIGHT) {
+        // navigate among available missions by increasing index
+        int start = g_Session.getSelectedBlockId();
+        for (int i = 1; i < GameSession::NB_MISSION; i++) {
+            int index = (start + i) % GameSession::NB_MISSION;
+            Block blk = g_Session.getBlock(index);
+            if (blk.status == BLK_AVAIL) {
+                g_Session.setSelectedBlockId(index);
+                consumed = true;
+                break;
+            }
+        }
     } else if (key.keyFunc == KFC_PAGEUP) {
-		// Pressing PageUp increase tax of 10 percents
-		Block blk = g_Session.getBlock(g_Session.getSelectedBlockId());
-		if (blk.status == BLK_FINISHED) {
-			consumed = g_Session.addToTaxRate(10);
-		}
-    } else if (key.keyFunc == KFC_PAGEDOWN ) {
-		// Pressing PageDown decrease tax of 10 percents
-		Block blk = g_Session.getBlock(g_Session.getSelectedBlockId());
-		if (blk.status == BLK_FINISHED) {
-			consumed = g_Session.addToTaxRate(-10);
-		}
+        // Pressing PageUp increase tax of 10 percents
+        Block blk = g_Session.getBlock(g_Session.getSelectedBlockId());
+        if (blk.status == BLK_FINISHED) {
+            consumed = g_Session.addToTaxRate(10);
+        }
+    } else if ( key.keyFunc == KFC_PAGEDOWN ) {
+        // Pressing PageDown decrease tax of 10 percents
+        Block blk = g_Session.getBlock(g_Session.getSelectedBlockId());
+        if (blk.status == BLK_FINISHED) {
+            consumed = g_Session.addToTaxRate(-10);
+        }
     }
 
     if (consumed) {
